Modify vendor file

--- a/.gitignore
+++ b/.gitignore
@@ -6,8 +6,7 @@
 
 # Ignore bundler config.
 /.bundle
-/vendor/*
-/vendor
+/vendor/bundle
 # Ignore the default SQLite database.
 /db/*.sqlite3
 /db/*.sqlite3-*
